# models/kyc_request.go
@@ -1,16 +1,18 @@
 package models
 
-import "time"
+import (
+	"time"
+)
 
-// KYCRequest represents a KYC request in the database
+// KYCRequest represents a KYC request in the system.
 type KYCRequest struct {
-	ID                 int64     `gorm:"primaryKey;column:Id"`
-	ClientID           int64     `gorm:"column:ClientId"`
-	RequesterClientID  int64     `gorm:"column:RequesterClientId"`
-	Code               string    `gorm:"column:Code"`
-	MobileNumber       string    `gorm:"column:MobileNumber"`
-	CreateDate         time.Time `gorm:"column:CreateDate"`
-	KYCRequestStatusID int8      `gorm:"column:KYCRequestStatusId"`
+	Id                 int       `json:"id" gorm:"primary_key"`
+	ClientId           int       `json:"clientId"`
+	RequesterClientId  int       `json:"requesterClientId"`
+	Code               string    `json:"code"`
+	MobileNumber       string    `json:"mobileNumber"`
+	CreateDate         time.Time `json:"createDate"`
+	KYCRequestStatusId int       `json:"kycRequestStatusId"`
 }
 
 // TableName sets the default table name for GORM
